REG-121 auto select

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
@@ -6,6 +6,7 @@ div(tabindex=0)
         data-on-options-deactivated="onOptionsDeactivated()",
         data-on-commit="onCommit()",
         data-on-change="fieldChanged()",
+        data-selected-option="selectedOption",
         data-input-text="inputText"
     )
     div(data-tribe-multiselect-available,
@@ -13,6 +14,7 @@ div(tabindex=0)
         data-active-top-down="optionsActivatedTopDown",
         data-active-bottom-up="optionsActivatedBottomUp",
         data-selected-options="selectedOptions",
+        data-selected-option="selectedOption",
         data-available-options="availableOptions",
         data-input-text="inputText",
         data-new-label="{{newLabel}}"
