--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -2,7 +2,7 @@
     div
         div(data-tribe-multiselect,
             data-selected-options="['bbb', 'ccc', 'aaa', 'eee', 'ddd']",
-            data-available-options="['ddd', 'aaa', 'bbb', 'ccc', 'eee', 'fff', 'eeeee', 'ggg', 'hhh']")
+            data-available-options="['ddd', 'aaa', 'bbb', 'ccc', 'eee', 'fff', 'eeeee', 'eeee', 'ee', 'e', 'ggg', 'hhh', 'a', 'aa', 'aab', 'aabb', 'aabbbbb', 'aabbbbbbb', 'aabbbbbbbbb']")
 
     div
         div(data-tribe-multiselect,
