--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
@@ -76,16 +76,16 @@ div[data-tribe-multiselect-selected]
 
 div.tribe-data-tribe-multiselect-available-body
   min-width: 300px
-  > div:first-of-type
+  .opts
     padding: 0
     > div
       padding: 5px 8px
-
-  > div:last-of-type
+    .option.selected
+        background-color: #f5f5f5
+  .new-opt
     border-top: dashed $app-input-border-color 1px
+    &.selected
+      background-color: #f5f5f5
     > span:first-of-type
       font-weight: 800
       margin-right: 5px
-  div.option
-    &.selected
-      background-color: #f5f5f5
