--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_footer.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_footer.jade
@@ -1,3 +1,3 @@
 footer
   span Tomitribe © {{now | date:'yyyy'}}
-  span Repogistry {{version.app}} (Tribestream {{version.server}})
+  span Registry {{version.app}} (Tribestream {{version.server}})
