REG-120 field implemented - no unit tests yet

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -3,9 +3,17 @@
         div(data-tribe-multiselect,
             data-selected-options="['bbb', 'ccc', 'aaa', 'eee', 'ddd']",
             data-available-options="['ddd', 'aaa', 'bbb', 'ccc', 'eee', 'fff', 'eeeee', 'eeee', 'ee', 'e', 'ggg', 'hhh', 'a', 'aa', 'aab', 'aabb', 'aabbbbb', 'aabbbbbbb', 'aabbbbbbbbb']")
-
     div
         div(data-tribe-multiselect,
             data-new-label="New Item",
             data-selected-options="['eee', 'bbb', 'aaa', 'ccc', 'ddd']",
             data-available-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
+    div
+        div(data-tribe-multiselect,
+            data-new-label="New Item",
+            data-selected-options="['eee', 'bbb']",
+            data-available-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
+        div(data-tribe-singleselect,
+            data-new-label="New Item",
+            data-selected-option="'aa'",
+            data-available-options="['aaaa', 'aaa', 'a', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
