REG-120 no unit tests - should not enter new values

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect.jade
@@ -15,7 +15,8 @@ div(tabindex=0)
         data-input-text="inputText",
         data-selected-item="selectedItem",
         data-version="version",
-        data-new-label="{{newLabel}}"
+        data-new-label="{{newLabel}}",
+        data-editable="editable"
     )
     div(data-tribe-field-actions,
         data-version="version",
