--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -15,5 +15,12 @@
             data-available-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
         div(data-tribe-singleselect,
             data-new-label="New Item",
+            data-editable="true",
             data-selected-option="'aa'",
-            data-available-options="['aaaa', 'aaa', 'a', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
+            data-available-options="['aaaa', 'aaa', 'aa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
+
+    div
+        div(data-tribe-singleselect,
+            data-new-label="New Item",
+            data-selected-option="'aa'",
+            data-available-options="['aaaa', 'aaa', 'aa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
