--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect_available.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect_available.jade
@@ -4,7 +4,9 @@
                 x-ng-click="selectItem(opt)"
                 x-ng-class="{selected: opt === selectedItem}")
             span {{opt}}
-    .new-opt(x-ng-if="newOpt", x-ng-class="{selected: newOpt === selectedItem}")
+    .new-opt(x-ng-if="newOpt && editable", x-ng-class="{selected: newOpt === selectedItem}")
         span(x-ng-if="newLabel") {{newLabel}}:
         span(x-ng-if="!newLabel") New:
         span {{inputText}}
+    .new-opt(x-ng-if="!newOpt && !editable")
+        span No matches
