REG-120 switching to new component

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
@@ -7,13 +7,13 @@
       display: flex
       width: 100%
       padding: 0 5px
+      align-items: center
       span
         margin: 5px 0
       input
-        margin: 0
+        margin: 5px 0
         border: 0
         padding: 0
-        flex-grow: 1
         height: 28px !important
         width: 0
         max-width: 100%
@@ -47,6 +47,7 @@
       div.text
         input
           width: auto
+          flex-grow: 1
         span
           display: none
   &:hover, &.active
