--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect.jade
@@ -16,7 +16,8 @@ div(tabindex=0)
         data-selected-item="selectedItem",
         data-version="version",
         data-new-label="{{newLabel}}",
-        data-editable="editable"
+        data-editable="editable",
+        data-get-option-text="getOptionText"
     )
     div(data-tribe-field-actions,
         data-version="version",
