--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -7,7 +7,9 @@ div
         div(data-tribe-multiselect, data-selected-options="endpoint.operation['x-tribestream-api-registry']['api-versions']", data-available-options="[]")
       div(data-submenu="true", app-endpoints-details-toc-anchor="Status")
         span Status
-        i(data-tribe-editable-option, data-value="endpoint.operation['x-tribestream-api-registry'].status", data-options="statusOptions")
+        div(data-tribe-singleselect,
+            data-selected-option="endpoint.operation['x-tribestream-api-registry'].status",
+            data-available-options="statusOptions")
     div
       div(data-submenu="true", app-endpoints-details-toc-anchor="Request formats")
         span Request formats
@@ -40,7 +42,9 @@ div
       i(data-tribe-editable-number, data-adjust="false", data-value="rl.rateLimit")
       span requests /
       i(data-tribe-editable-number, data-adjust="false", data-value="rl.rateWindow")
-      i(data-tribe-editable-option, data-value="rl.rateUnit", data-options="rateUnits")
+      div(data-tribe-singleselect,
+          data-selected-option="rl.rateUnit",
+          data-available-options="rateUnits")
       span Description
       i(data-tribe-editable-text, data-adjust="false", data-value="rl.description")
       div(x-ng-click="removeRate(rl)")
