--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -29,7 +29,7 @@
         label object non-editable
         div(data-tribe-singleselect,
             data-new-label="New Item",
-            data-selected-option="{text: 'aa', value: 'a_a'}",
+            data-selected-option="'a_a'",
             data-available-options="[{text: 'aa', value: 'a_a'}, {text: 'aaa', value: 'a_a_a'}, {text: 'aaaa', value: 'a_a_a_a'}]")
 
     div
@@ -37,5 +37,12 @@
         div(data-tribe-singleselect,
             data-new-label="New Item",
             data-editable="true",
-            data-selected-option="{text: 'aa', value: 'a_a'}",
+            data-selected-option="'a_a'",
             data-available-options="[{text: 'aa', value: 'a_a'}, {text: 'aaa', value: 'a_a_a'}, {text: 'aaaa', value: 'a_a_a_a'}]")
+
+    div
+        label method
+        div(data-tribe-singleselect,
+            data-available-options="[{text:'DELETE', value:'delete'}, {text:'HEAD', value:'head'}, {text:'GET', value:'get'}, {text:'OPTIONS', value:'options'}, {text:'POST', value:'post'}, {text:'PUT', value:'put'}, {text:'PATCH', value:'patch'}]",
+            data-selected-option="'get'",
+            data-get-option-text="toUppercase")
