REG-120 reversion rates to the old component

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -42,9 +42,7 @@ div
       i(data-tribe-editable-number, data-adjust="false", data-value="rl.rateLimit")
       span requests /
       i(data-tribe-editable-number, data-adjust="false", data-value="rl.rateWindow")
-      div(data-tribe-singleselect,
-          data-selected-option="rl.rateUnit",
-          data-available-options="rateUnits")
+      i(data-tribe-editable-option, data-value="rl.rateUnit", data-options="rateUnits")
       span Description
       i(data-tribe-editable-text, data-adjust="false", data-value="rl.description")
       div(x-ng-click="removeRate(rl)")
