REG-164 using singleselect component in the parameters table, type column.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
@@ -20,7 +20,9 @@ div
             td
               i(data-tribe-editable-text, data-value="param.name", data-adjust="false")
             td
-              i(data-tribe-editable-text, data-value="param.type", data-adjust="false")
+              div(data-tribe-singleselect,
+                data-selected-option="param.type",
+                data-available-options="['integer', 'long', 'float', 'double', 'string', 'byte', 'binary', 'boolean', 'date', 'dateTime', 'password']")
             td
               div(data-tribe-singleselect,
                   data-selected-option="param.in",
