REG-160 using enter key to add new item and commit a field; use escape to clear input text and cancel field changes.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
@@ -4,7 +4,8 @@ div(tabindex=0)
         data-on-select-top-down-option="onSelectTopDownOption()",
         data-on-select-bottom-up-option="onSelectBottomUpOption()",
         data-on-options-deactivated="onOptionsDeactivated()",
-        data-on-commit="onCommit()",
+        data-on-commit="fieldCommitted()",
+        data-on-cancel="fieldCanceled()",
         data-on-change="fieldChanged()",
         data-selected-option="selectedOption",
         data-input-text="inputText"
