REG-171 field was sorted in case sensitive (by our code) and case insensitive (by the angular template sortby function). Using case insensitive in both cases now.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_multiselect.jade
@@ -18,7 +18,8 @@ div(tabindex=0)
         data-selected-option="selectedOption",
         data-available-options="availableOptions",
         data-input-text="inputText",
-        data-new-label="{{newLabel}}"
+        data-new-label="{{newLabel}}",
+        data-get-option-text="getOptionText"
     )
     div(data-tribe-field-actions,
         data-version="version",
