REG-162 renaming badly named section

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
@@ -50,7 +50,7 @@ div
             div(x-ng-click="removeErrorCode(val);")
               i.fa.fa-trash-o
   .resp-body
-    h2 Request Body
+    h2 Response Body
     div(data-tribe-editable-block, data-content="endpoint.respBody")
   .samples
     h2 Samples
