REG-164 set common min-height to used components

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
@@ -3,6 +3,10 @@
 @import "common_table"
 
 div[data-app-endpoints-details-response-request]
+  td
+    padding-right: 5px
+    > div
+      width: 100%
   > div
     h2
       display: flex
