--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
@@ -36,6 +36,9 @@
 
 [data-tribe-singleselect]
   display: inline-block
+  [data-tribe-singleselect-selected]
+    .text
+      overflow: hidden
   > div
     border: solid transparent 1px
   &.active
