--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -9,6 +9,7 @@
             data-selected-options="['eee', 'bbb', 'aaa', 'ccc', 'ddd']",
             data-available-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
     div
+        span multi and single
         div(data-tribe-multiselect,
             data-new-label="New Item",
             data-selected-options="['eee', 'bbb']",
@@ -18,6 +19,14 @@
             data-editable="true",
             data-selected-option="'aa'",
             data-available-options="['aaaa', 'aaa', 'aa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
+
+    div
+        span multi and text
+        div(data-tribe-multiselect,
+            data-new-label="New Item",
+            data-selected-options="['eee', 'bbb']",
+            data-available-options="['aaa', 'bbb', 'ccc', 'ddd', 'eee', 'eeeee', 'fff', 'ggg', 'hhh']")
+        div(data-tribe-editable-text, data-value="''")
 
     div
         div(data-tribe-singleselect,
