--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
@@ -18,7 +18,10 @@ div
         tbody
           tr(x-ng-repeat="param in endpoint.operation.parameters | orderBy:'param.name'")
             td
-              i(data-tribe-editable-text, data-value="param.name", data-adjust="false")
+              div(data-tribe-singleselect,
+                data-editable="true",
+                data-selected-option="param.name",
+                data-available-options="['Authorization', 'Date', 'Content-Type', 'Accept']")
             td
               div(data-tribe-singleselect,
                 data-selected-option="param.type",
