--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
@@ -14,13 +14,13 @@ div
       tbody
         tr(x-ng-repeat="val in endpoint.expectedValues")
           td
-            i(data-tribe-editable-text, data-empty-text="not set", data-adjust="false", data-value="val.name")
+            div(data-tribe-editable-text, data-empty-text="not set", data-adjust="false", data-value="val.name")
           td
-            i(data-tribe-editable-text, data-empty-text="not set", data-adjust="false", data-value="val.type")
+            div(data-tribe-editable-text, data-empty-text="not set", data-adjust="false", data-value="val.type")
           td
-            i(data-tribe-editable-block, data-empty-text="not set", data-content="val.values")
+            div(data-tribe-editable-block, data-empty-text="not set", data-content="val.values")
           td
-            i(data-tribe-editable-block, data-empty-text="not set", data-content="val.description")
+            div(data-tribe-editable-block, data-empty-text="not set", data-content="val.description")
           td
             div(x-ng-click="removeExpectedValue(val);")
               i.fa.fa-trash-o
@@ -39,13 +39,13 @@ div
       tbody
         tr(x-ng-repeat="val in endpoint.operation['x-tribestream-api-registry']['response-codes'] | orderBy:'http_status'")
           td
-            i(data-tribe-editable-text, data-adjust="false", data-value="val.http_status")
+            div(data-tribe-editable-text, data-adjust="false", data-value="val.http_status")
           td
-            i(data-tribe-editable-text, data-adjust="false", data-value="val.error_code")
+            div(data-tribe-editable-text, data-adjust="false", data-value="val.error_code")
           td
-            i(data-tribe-editable-block, data-content="val.message")
+            div(data-tribe-editable-block, data-content="val.message")
           td
-            i(data-tribe-editable-block, data-content="val.description")
+            div(data-tribe-editable-block, data-content="val.description")
           td
             div(x-ng-click="removeErrorCode(val);")
               i.fa.fa-trash-o
