--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -62,3 +62,8 @@
             data-new-label="New Method",
             data-selected-options="[]",
             data-available-options="['basic', 'form', 'digest', 'HTTP Signatures', 'Bearer']")
+
+    div
+        label text component
+        div(data-tribe-text, data-value="'lalala'")
+        div(data-tribe-text, data-type="number", data-value="1")
