--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -69,6 +69,7 @@ a
 @import "component_switch"
 @import "component_multiselect"
 @import "component_singleselect"
+@import "component_text"
 @import "component_tabs"
 @import "component_field_actions"
 
