REG-119 component unit test -> loading value and removing element on destroy

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
@@ -21,7 +21,8 @@ div[data-app-endpoints-details-header]
         display: flex
         align-items: center
         > div[data-tribe-text]
-          flex-grow: 1
+          &.active
+            flex-grow: 1
           > div
             input, span
               color: #000000
