--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_text.jade
@@ -1,4 +1,4 @@
-div(tabindex=0)
+div(tabindex=0, title="Click to edit")
     div
         .text
             input(type="{{type ? type : 'text'}}", x-ng-keyup="keyEntered($event);", x-ng-model="value")
