--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_markdown.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_markdown.jade
@@ -1,7 +1,10 @@
 div(tabindex=0)
     .value
         textarea(ng-model="value")
-    .preview(x-ng-bind-html="preview | tribeHtml")
+    .preview
+        div(x-ng-bind-html="preview | tribeHtml")
+        .edit-icon
+            i.fa.fa-pencil
     div(data-tribe-field-actions,
         data-version="version",
         data-active="fieldDirty",
