--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_components.jade
@@ -4,6 +4,12 @@
         div(data-tribe-markdown, data-value="'lalala'")
 
     div
+        label markdown and text
+        .md-text
+            div(data-tribe-markdown, data-value="'I am markdown'")
+            div(data-tribe-text, data-value="'I am text'")
+
+    div
         div(data-tribe-multiselect,
             data-selected-options="['bbb', 'ccc', 'aaa', 'eee', 'ddd']",
             data-available-options="['ddd', 'aaa', 'bbb', 'ccc', 'eee', 'fff', 'eeeee', 'eeee', 'ee', 'e', 'ggg', 'hhh', 'a', 'aa', 'aab', 'aabb', 'aabbbbb', 'aabbbbbbb', 'aabbbbbbbbb']")
