REG-118 using new component in the endpoint details page, response body field

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
@@ -3,6 +3,8 @@
 @import "common_table"
 
 div[data-app-endpoints-details-response-request]
+  div[data-tribe-markdown]
+    display: block
   td
     padding-right: 5px
     > div
