--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@@ -17,6 +17,7 @@ div[data-tribe-markdown]
     > div:first-of-type
       min-height: 44px
       border: solid transparent 1px
+      flex-grow: 1
       border-right: 0
       > *:last-child
         margin-bottom: 0
