REG-119 adjusting styles for endpoint details header.

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
@@ -42,6 +42,15 @@ div[data-app-endpoints-details-header]
         div.value span
           margin-right: 5px !important
           color: #000000
+        div[data-tribe-singleselect]
+          margin-right: 5px
+          &.active
+            input
+              margin: 12px 0
+        div[data-tribe-text]
+          &.active
+            input
+              margin: 4px 0
     > h2
       margin: 0
       text-transform: uppercase
