REG-118 normalize preview css - avoid using styles form the application

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@@ -37,6 +37,10 @@ div[data-tribe-markdown]
       display: block
 
   div.preview, div.editor-preview
+    h1, h2, h3, h4, h5, h6
+      margin-top: 10px
+      &:first-child
+        margin-top: 10px
     table
       border: solid $app-input-border-color 1px
       width: 100%
