REG-118 do not highlight if code type not defined

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@@ -54,10 +54,11 @@ div[data-tribe-markdown]
         text-align: left
     pre
       padding: 10px
-      background-color: #eeeeee
     code
       border: 0
       padding: 0
       background-color: transparent
+    pre, code
+      background-color: #eeeeee
     strong
       font-weight: bold
