REG-118 endpoint details - remove fixed header to enable printing the whole page.

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@@ -37,6 +37,7 @@ div[data-tribe-markdown]
       display: block
 
   div.preview > div[x-ng-bind-html], div.editor-preview
+    max-width: 100%
     *
       font-family: "open sans", "Montserrat", Helvetica, Arial, sans-serif
     pre, code
@@ -59,6 +60,7 @@ div[data-tribe-markdown]
       padding: 0
       background-color: transparent
     pre, code
+      max-width: 100%
       background-color: #eeeeee
     strong
       font-weight: bold
