--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
@@ -36,10 +36,10 @@ div
                   data-available-options="[{text: 'Yes', value: true}, {text: 'No', value: false}]")
             td.description
               div
-                i(data-tribe-editable-block, data-content="param.description")
+                div(data-tribe-markdown, data-value="param.description")
             td.valid-values
               div
-                div(data-tribe-multiselect, data-selected-options="param.sampleValues", data-available-options="[]")
+                div(data-tribe-markdown, data-value="param.sampleValues")
             td
               div
                 i.fa.fa-trash-o(x-ng-click="removeParam(param);")
