--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_markdown.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_markdown.jade
@@ -10,3 +10,4 @@ div(tabindex=0)
     data-active="fieldDirty",
     data-on-confirm="onCommit()",
     data-on-cancel="onCancel()")
+    div(data-tribe-markdown-help, data-visible="helpVisible")
