--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_list_application.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_list_application.jade
@@ -4,7 +4,7 @@ div
     span ({{application.endpoints.length}})
   div(x-ng-repeat="endpoint in endpoints")
     i.fa(x-ng-class="{'fa-lock': endpoint.secured, 'fa-unlock': !endpoint.secured}")
-    a(x-ng-href="application/{{endpoint.applicationId}}/endpoint/{{endpoint.endpointId}}") {{endpoint.httpMethod}} {{endpoint.path| pathencode}}
+    a(x-ng-href="application/{{endpoint.applicationId}}/endpoint/{{endpoint.endpointId}}") {{endpoint.httpMethod | uppercase}} {{endpoint.path| pathencode}}
     span {{endpoint.description | tribeHtmlText}}
   div(x-ng-if="showAll")
     span(x-ng-click="showAllEndpoints();") Show more {{application.endpoints.length - pageSize}} endpoints
