--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_option.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_option.jade
@@ -1,4 +1,4 @@
-div(tabindex=0, x-ng-click="open()")
+div(tabindex=0)
   .value
     span(ng-show="valueText && valueText.trim() !== ''") {{valueText}}
     span.empty(ng-show="!valueText || valueText.trim() === ''") {{emptyText}}
