Make sure Image is a title so it renders

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_markdown_help.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_markdown_help.jade
@@ -34,7 +34,7 @@ div
                     > This is a quote.
                     > It can span multiple lines!
                 ```
-                h4 Images  
+                ## Images  
                 ```
                     ![](http://www.example.com/image.jpg)
                 ```
