REG-196 align data-tribe-editable-block and data-tribe-markdown components

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_block.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_block.sass
@@ -20,8 +20,9 @@ i[data-tribe-editable-block], div[data-tribe-editable-block]
         align-items: center
         height: 100%
     .CodeMirror
-      min-height: 44px
+      min-height: 40px
       height: auto
+      padding: 7px 10px
       border-color: transparent
     &:hover
       .CodeMirror
