REG-190 icon aligned in safari.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_query_input.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_query_input.jade
@@ -1,4 +1,5 @@
 div
   input(type="text", placeholder="Query services...", x-ng-model="value", autofocus)
   button(x-ng-click="updateQuery();")
-    i.fa.fa-search
+    div
+      i.fa.fa-search
