--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_query_input.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_query_input.sass
@@ -13,17 +13,21 @@ i[data-app-endpoints-query-input]
       background-color: $transparent
       border-color: $color !important
       padding: 0
-      display: flex
-      flex-direction: column
-      justify-content: center
-      align-items: center
+      display: block
       &:hover, &:focus, &:active
         background-color: $transparent
         border-color: $color !important
-      > i
-        color: $tomitribe-orange !important
-        font-size: 20px
-        margin: 0 8px
+      > div
+        width: 100%
+        height: 100%
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        > i
+          color: $tomitribe-orange !important
+          font-size: 20px
+          margin: 0 8px
     > input
       display: inline
       margin: 0 !important
