[REG-230] Fix persistence of Response Body of endpoint details.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
@@ -51,7 +51,7 @@ div
               i.fa.fa-trash-o
   .resp-body
     h2 Response Body
-    div(data-tribe-markdown, data-value="endpoint.respBody")
+    div(data-tribe-markdown, data-value="endpoint.operation['x-tribestream-api-registry']['response-body']")
   .samples
     h2 Samples
     h3 Request Headers
