[REG-205] Fix persistence of parameter valid values on endpoint details page.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
@@ -39,7 +39,7 @@ div
                 div(data-tribe-markdown, data-value="param.description")
             td.valid-values
               div
-                div(data-tribe-markdown, data-value="param.sampleValues")
+                div(data-tribe-markdown, data-value="param['x-tribestream-api-registry']['valid-values']")
             td
               div
                 i.fa.fa-trash-o(x-ng-click="removeParam(param);")
