[REG-231] Fix persistence of examples.

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_response_request.jade
@@ -55,10 +55,10 @@ div
   .samples
     h2 Samples
     h3 Request Headers
-    div(data-tribe-markdown, data-value="endpoint.samples.responseHeaders")
+    div(data-tribe-markdown, data-value="endpoint.operation['x-tribestream-api-registry']['request-parameters']")
     h3 Response Parameters
-    div(data-tribe-markdown, data-value="endpoint.samples.responseParameters")
+    div(data-tribe-markdown, data-value="endpoint.operation['x-tribestream-api-registry']['response-parameters']")
     h3 Response Body
-    div(data-tribe-markdown, data-value="exampleResponseXml")
+    div(data-tribe-markdown, data-value="endpoint.operation['x-tribestream-api-registry']['example-response']")
     h3 Response Body Error
-    div(data-tribe-markdown, data-value="errorResponseXml")
+    div(data-tribe-markdown, data-value="endpoint.operation['x-tribestream-api-registry']['example-error-response']")
