--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@@ -64,12 +64,11 @@ div[data-tribe-markdown]
     justify-content: center
     align-items: center
     padding: 0 5px
-    border: solid $app-input-border-color 1px
     background-color: #f5f5f5
     align-self: stretch
   div.preview
     display: flex
-    > div:first-of-type
+    > div:nth-of-type(1)
       padding: 10px
       min-height: 44px
       border: solid transparent 1px
@@ -78,18 +77,41 @@ div[data-tribe-markdown]
       > *:last-child
         margin-bottom: 0
     &:hover
-      > div:first-of-type
-        border-color: $app-input-border-color
       div.edit-icon
+        border-left: solid $app-input-border-color 1px
         opacity: 1
   div.value
     display: none
+    > div
+      border-color: transparent
+    div.editor-toolbar
+      border-bottom: solid $app-input-border-color 1px
   &.active
     display: block
     div.preview
       display: none
     div.value
       display: block
+  div.main
+    display: flex
+    border: solid transparent 1px
+    &:hover
+      border-color: $app-input-border-color
+    > div
+      flex-grow: 1
+      width: 50%
+    &.sidebyside
+      > div
+        display: block
+  &.active
+    div.preview
+      &:hover
+        div.edit-icon
+          opacity: 0
+    div.main
+      border-color: $app-input-border-color
+      > div:last-of-type
+        border-left: solid $app-input-border-color 1px
 
   div.preview > div[x-ng-bind-html], div.editor-preview
     max-width: 100%
