--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_markdown.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_markdown.jade
@@ -1,4 +1,4 @@
-div(tabindex=0)
+div(tabindex=0, ng-class="{'fullscreen': fullscreen}")
     .main(ng-class="{'sidebyside': sidebyside}")
         .value
             textarea(ng-model="value")
