REG-199 hiding + buttons

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_resource_information.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_resource_information.sass
@@ -47,6 +47,9 @@ div[data-app-endpoints-details-resource-information]
     div.app-rates
       width: 100%
       margin-bottom: 30px
+      &:hover
+        div.tribe-add-btn
+          opacity: 1
       i[data-tribe-editable-text], i[data-tribe-editable-number], i[data-tribe-editable-option]
         > div
           border-color: #f2f0f0
