--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_see.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_see.sass
@@ -2,6 +2,9 @@
 @import "app_endpoints_details_common"
 
 div[data-app-endpoints-details-see]
+  &:hover
+    div.tribe-add-btn
+      opacity: 1
   > div
     max-width: $app-max-width
     margin-top: 10px
