--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
@@ -1,7 +1,7 @@
 div
   h2
     span Parameters
-    .add-param(tabindex=0, x-ng-click="addParam()", app-endpoints-details-toc-anchor="Parameters")
+    .add-param(tabindex=0, x-ng-click="addParam()", app-endpoints-details-toc-anchor="Parameters").tribe-add-btn
       i.fa.fa-plus
   div.app-epd-params
     div(ng-show="endpoint.operation.parameters.length")
