--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_see.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_see.jade
@@ -1,7 +1,7 @@
 div
   div
     span See also
-    div.add-link
+    div.add-link.tribe-add-btn
       i.fa.fa-plus
   ul
     li(x-ng-repeat="see in endpoint.operation['x-tribestream-api-registry'].sees | orderBy:['seeOrder', 'title']")
