--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_parameters.sass
@@ -4,6 +4,9 @@
 
 div[data-app-endpoints-details-parameters]
   $border-color: #e9e9e9
+  &:hover
+    div.tribe-add-btn
+      opacity: 1
   [data-tribe-singleselect]
     display: block
   > div
