--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_response_request.sass
@@ -82,3 +82,7 @@ div[data-app-endpoints-details-response-request]
     div.samples
       h2
         margin: $section-margin-bottom 0 20px 0
+    div.expected, div.values
+      &:hover
+        div.tribe-add-btn
+          opacity: 1
