--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints.sass
@@ -24,7 +24,7 @@ div[data-app-endpoints]
           @media (max-width: $wrapping-width)
             padding: 20px
       div.filters
-        padding: 20px 0 0 0
+        padding: 20px 20px 0 0
         border-left: solid #ebebeb 1px
         min-width: 400px
         @media (max-width: $wrapping-width)
