--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/page_login.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/page_login.jade
@@ -7,6 +7,9 @@
     div
       input(type="text", placeholder="username", x-ng-model="username", name="username", autofocus)
       input(type="password", placeholder="password", x-ng-model="password", name="password")
+      // TODO: Styling!!!!
+      h3 Oauth Login
+      i(data-tribe-switch, value="companyLogin")
       button.orange(type="submit") login
       h3 or login as guest
       button(x-ng-click="loginAsGuest()") guest
