Unleash the history button

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
@@ -18,5 +18,5 @@ div
         div(data-app-endpoints-details-history)
         div
           button.orange(x-ng-click="save()") Save
-          //button.orange(x-ng-click="showHistory()") Show History
+          button.orange(x-ng-click="showHistory()") Show History
     div(data-app-footer)
