REG-253 use fixed position

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_confirmation_message.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_confirmation_message.sass
@@ -41,7 +41,7 @@ body
 
   div[data-app-closable-messages]
     > div
-      position: absolute
+      position: fixed
       right: $default-padding
       bottom: $default-padding
       z-index: 3000
