--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_history.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_history.jade
@@ -5,6 +5,7 @@ div(ng-show="history")
       table
         thead
           tr
+            th &nbsp;
             th Revision
             th Timestamp
             th Username
@@ -12,6 +13,8 @@ div(ng-show="history")
             th
         tbody
           tr(x-ng-repeat="historyItem in history")
+            td
+              input(type="checkbox", x-ng-change="onHistorySelect(historyItem)", x-ng-model="historyItem.$ui.selected")
             td
               span {{historyItem.revisionId}}
             td
@@ -22,5 +25,8 @@ div(ng-show="history")
               span {{historyItem.usercomment}}
             td
               i.fa.fa-edit(x-ng-click="showHistoricEndpoint(historyItem)")
+    div(id="history-diff", x-ng-show="showDiff && selected.length == 2")
   button.orange(x-ng-click="closeHistory()") Close
-
+  button(x-ng-click="doDiff()", x-ng-show="showDiff") Hide Diff
+  button(x-ng-click="doDiff()", x-ng-show="!showDiff") Show Diff
+  button(x-ng-click="saveMerge()", x-ng-show="showDiff") Save left pane as endpoint
